Estructura HTML (hasta la galeria)

--- a/index.html
+++ b/index.html
@@ -5,9 +5,139 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Cafe-Show</title>
+    <title>Cafe Show</title>
 </head>
 <body>
-    
+    <header>
+        <div class="contenedor">
+            <nav class="menu">
+                <a href="#" id="btn-acerca-de">Acerca de</a>
+                <a href="#" id="btn-menu">Menu</a>
+                <a href="#" id="btn-galeria">Galeria</a>
+                <a href="#" id="btn-ubicacion">Ubicación</a>
+            </nav>
+
+            <div class="textos">
+                <h1 class="nombre">Cafe <span>Show</span></h1>
+                <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+            </div>
+        </div>
+    </header>
+
+    <section class="main">
+
+        <section class="acerca-de" id="acerca-de">
+            <div class="contenedor">
+                <div class="foto">
+                    <img src="img/acerca-de.jpg" alt="Acerca de">
+                </div>
+                <article>
+                    <h3>Acerca de</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Repellat adipisci accusamus aperiam! Fugit odit porro 
+                        quas dicta laborum.</p>
+
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Earum perspiciatis eligendi sapiente quo? Recusandae 
+                        suscipit perferendis libero veritatis eius sit a nobis 
+                        dicta? Temporibus nam voluptas ipsa rerum!</p>
+                </article>
+            </div>
+        </section>
+
+        <section class="menu" id="platillos">
+            <div class="contenedor">
+                <h3 class="titulo" id="platillos">Menú</h3>
+                <div class="contenedor-menu">
+                    <div class="contendor-menu2">
+                        <article>
+                            <p class="categoria">De Comer</p>
+                            <div class="platillo">
+                                <p class="nombre">Lorem ipsum dolor sit.</p>
+                                <p class="precio">$15</p>
+                                <p class="descripcion">Lorem ipsum dolor sit amet 
+                                    consectetur adipisicing elit. Possimus, expedita accusamus!</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Lorem ipsum dolor sit.</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Lorem ipsum dolor sit amet 
+                                    consectetur adipisicing elit. Possimus, expedita accusamus!</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Lorem ipsum dolor sit.</p>
+                                <p class="precio">$20</p>
+                                <p class="descripcion">Lorem ipsum dolor sit amet 
+                                    consectetur adipisicing elit. Possimus, expedita accusamus!</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Lorem ipsum dolor sit.</p>
+                                <p class="precio">$35</p>
+                                <p class="descripcion">Lorem ipsum dolor sit amet 
+                                    consectetur adipisicing elit. Possimus, expedita accusamus!</p>
+                            </div>
+                        </article>
+                        <article>
+                            <p class="categoria">De Tomar</p>
+                            <div class="platillo">
+                                <p class="nombre">Lorem ipsum dolor sit.</p>
+                                <p class="precio">$15</p>
+                                <p class="descripcion">Lorem ipsum dolor sit amet 
+                                    consectetur adipisicing elit. Possimus, expedita accusamus!</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Lorem ipsum dolor sit.</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Lorem ipsum dolor sit amet 
+                                    consectetur adipisicing elit. Possimus, expedita accusamus!</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Lorem ipsum dolor sit.</p>
+                                <p class="precio">$20</p>
+                                <p class="descripcion">Lorem ipsum dolor sit amet 
+                                    consectetur adipisicing elit. Possimus, expedita accusamus!</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Lorem ipsum dolor sit.</p>
+                                <p class="precio">$35</p>
+                                <p class="descripcion">Lorem ipsum dolor sit amet 
+                                    consectetur adipisicing elit. Possimus, expedita accusamus!</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="galeria" id="galeria">
+            <div class="foto">
+                <img src="img/1.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/2.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/3.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/4.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/5.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/6.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/7.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/8.jpg" alt="">
+            </div>
+        </section>
+
+        <section class="ubicacion" id="ubicacion"></section>
+
+    </section>
 </body>
 </html>
