Estilos del header

--- a/index.html
+++ b/index.html
@@ -136,8 +136,35 @@
             </div>
         </section>
 
-        <section class="ubicacion" id="ubicacion"></section>
+        <section class="ubicacion" id="ubicacion">
+            <div class="contenedor">
+                <h3 class="titulo">Ubicación</h3>
+                <div class="direccion">
+                    <p class="calle">2915 Primrose Lane<br />Anaheim, CA 9280</p>
+                    <p class="telefono">(000) 400-5479</p>
+                    <p class="correo">correo[at]tucorreo.com</p>
+                </div>
+
+                <div class="horarios">
+                    <h4>Horarios</h4>
+                    <p class="entreSemana">Lunes a Viernes <br> 8:00am - 9:00pm</p>
+                    <p class="finSemana">Sabados y Domingos <br> 11:00am - 10:00pm</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1337.7010190533672!2d-69.92007095804802!3d18.502228637125178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sdo!4v1628332756487!5m2!1ses-419!2sdo" width="1200" height="550" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
 
     </section>
+
+    <footer>
+        <div class="contenedor">
+            <div class="copyright">
+                <p>Copyright CodeShadows @ 2021</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
