--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="contenedor">
                 <h3 class="titulo" id="platillos">Menú</h3>
                 <div class="contenedor-menu">
-                    <div class="contendor-menu2">
+                    <div class="contenedor-menu2">
                         <article>
                             <p class="categoria">De Comer</p>
                             <div class="platillo">
