Diseño y estructura base completada

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="contenedor">
             <nav class="menu">
                 <a href="#" id="btn-acerca-de">Acerca de</a>
-                <a href="#" id="btn-menu">Menu</a>
+                <a href="#" id="btn-menu">Menú</a>
                 <a href="#" id="btn-galeria">Galeria</a>
                 <a href="#" id="btn-ubicacion">Ubicación</a>
             </nav>
@@ -45,7 +45,7 @@
             </div>
         </section>
 
-        <section class="menu" id="platillos">
+        <section class="menu">
             <div class="contenedor">
                 <h3 class="titulo" id="platillos">Menú</h3>
                 <div class="contenedor-menu">
@@ -166,5 +166,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/efectos.js"></script>
+    <script src="js/parallax.js"></script>
 </body>
 </html>
